Updated the navbar in nioh2.html. Removed old images, and added new ones in /nioh2/img/.

--- a/nioh2/nioh2.html
+++ b/nioh2/nioh2.html
@@ -58,7 +58,7 @@
                 </a>
 
                 <!-- Nioh 2 Logo -->
-                <a href="./nioh2.html"><img src="./img/nioh2_logo_small.png" alt=""></a>
+                <a href="./nioh2.html"><img src="./img/nioh2_logo_2.png" alt=""></a>
 
                 <!-- Navbar Buttons -->
                 <!-- hidden nav for mobile viewports -->
