Updated paths in tailwind.config.js. Added new images in nioh2/img/ and wolong/img/. Updated nioh2_TODO.txt and wolong_TODO.txt. Added wolong.html and wolong/js/main.js. Updated the navbar and footer in nioh2.html.

--- a/wolong/wolong.html
+++ b/wolong/wolong.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nioh 2 Wiki</title>
+    <title>Wo Long: Fallen Dynasty Wiki</title>
     <!-- ========== ========== ==========
     Google Fonts
     ========== ========== ========== -->
@@ -16,7 +16,7 @@
     FlowBite CSS
     ========== ========== ========== -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.3/flowbite.min.css"  rel="stylesheet" />
-
+    
     <!-- ========== ========== ==========
     TailWindCSS Link
     ========== ========== ========== -->
@@ -58,7 +58,7 @@
                 </a>
 
                 <!-- Nioh 2 Logo -->
-                <a href="./nioh2.html"><img src="./img/nioh2_logo_2.png" alt=""></a>
+                <a href="./nioh2.html"><img src="./img/wolong_logo_small.png" alt=""></a>
 
                 <!-- Navbar Buttons -->
                 <!-- hidden nav for mobile viewports -->
@@ -84,7 +84,7 @@
                             <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Recommended Settings</a></li>
                             <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Starting Recommendations</a></li>
                             <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Character Stats</a></li>
-                            <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">The Shrine</a></li>
+                            <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">??? The Shrine ???</a></li>
                             <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">The Dojo</a></li>
                             <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">NG+ Cycles</a></li>
                         </ul>
@@ -104,13 +104,12 @@
                         <ul class="py-2 font-asul text-gray-200" aria-labelledby="generalButton">
                             <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Combat</a></li>
                             <hr class="h-[2px] border-0 bg-stone-200">
-                            <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Stances</a></li>
-                            <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Ki Pulse</a></li>
-                            <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Skills / Skill Trees</a></li>
-                            <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Yokai Shift & Burst Counters</a></li>
-                            <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Doding / Guarding / Parrying</a></li>
-                            <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Status Effects</a></li>
-                            <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Advanced Tech</a></li>
+                            <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Deflect</a></li>
+                            <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Spirit Guage</a></li>
+                            <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Morale Rank</a></li>
+                            <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Five Phases / Status Effects</a></li>
+                            <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Doding / Guarding</a></li>
+                            <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">??? Advanced Tech ???</a></li>
                         </ul>
                     </div>
 
@@ -130,12 +129,10 @@
                             <hr class="h-[2px] border-0 bg-stone-200">
                             <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Weapons</a></li>
                             <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Armor</a></li>
-                            <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Ninjutsu</a></li>
-                            <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Onmyo Magic</a></li>
-                            <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Soul Cores</a></li>
-                            <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Guardian Spirits</a></li>
+                            <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Martial Arts</a></li>
+                            <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Wizardry Spells</a></li>
+                            <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Divine Beasts</a></li>
                             <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Accessories</a></li>
-                            <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Demon Parade Picture Scrolls</a></li>
                             <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Graces & Sets</a></li>
                             <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Items</a></li>
                         </ul>
@@ -158,9 +155,7 @@
                             <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Missions</a></li>
                             <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Enemies</a></li>
                             <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Bosses</a></li>
-                            <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">The Underworld</a></li>
-                            <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">The Depths of the Underworld</a></li>
-                            <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Kodama & Sudama</a></li>
+                            <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Shitieshou Locations</a></li>
                             <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Characters</a></li>
                         </ul>
                     </div>
@@ -203,8 +198,9 @@
                         <ul class="py-2 font-asul text-gray-200" aria-labelledby="generalButton">
                             <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Online</a></li>
                             <hr class="h-[2px] border-0 bg-stone-200">
-                            <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Online Modes</a></li>
-                            <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Matchmaking</a></li>
+                            <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Co-Op</a></li>
+                            <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Invasions</a></li>
+                            <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Vengeance System</a></li>
                             <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Hidden Tea House</a></li>
                             <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Revenants</a></li>
                             <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Benevolent Graves</a></li>
@@ -243,7 +239,7 @@
     Hero Section
     ========== ========== ========== -->
     <section class="mt-6 lg:mt-28 flex flex-col items-center justify-center gap-4">
-        <img src="./img/nioh2_logo_large.png" alt="">
+        <img src="./img/wolong_logo_large.png" alt="">
         <h1 class="font-asul text-white text-6xl">Wiki</h1>
     </section>
 
@@ -269,8 +265,8 @@
             <!-- ========== 
             top row 
             ========== -->
-            <a class="mask w-full h-[98px] py-2 rounded flex flex-col items-center justify-center hover:bg-light-red" href="">
-                <img src="./img/basics_icon.png" alt="">
+            <a class="mask w-full py-2 rounded flex flex-col items-center hover:bg-light-red" href="">
+                <img src="./img/combat_icon.png" alt="">
                 <span class="font-asul text-2xl text-slate-300">Basics</span>
             </a>
 
@@ -306,7 +302,7 @@
             <!-- ========== 
             top row 
             ========== -->
-            <a class="mask w-full h-[98px] py-2 rounded flex flex-col items-center justify-center hover:bg-light-red" href="">
+            <a class="mask w-full py-2 rounded flex flex-col items-center hover:bg-light-red" href="">
                 <img src="./img/combat_icon.png" alt="">
                 <span class="font-asul text-2xl text-slate-300">Combat</span>
             </a>
@@ -346,7 +342,7 @@
             <!-- ========== 
             top row 
             ========== -->
-            <a class="mask w-full h-[98px] py-2 rounded flex flex-col items-center justify-center hover:bg-light-red" href="">
+            <a class="mask w-full py-2 rounded flex flex-col items-center hover:bg-light-red" href="">
                 <img src="./img/equipment_icon.png" alt="">
                 <span class="font-asul text-2xl text-slate-300">Equipment</span>
             </a>
@@ -395,8 +391,8 @@
             <!-- ========== 
             top row 
             ========== -->
-            <a class="mask w-full h-[98px] py-2 rounded flex flex-col items-center justify-center hover:bg-light-red" href="">
-                <img src="./img/world_icon.png" alt="">
+            <a class="mask w-full py-2 rounded flex flex-col items-center hover:bg-light-red" href="">
+                <img src="./img/combat_icon.png" alt="">
                 <span class="font-asul text-2xl text-slate-300">World</span>
             </a>
 
@@ -435,8 +431,8 @@
             <!-- ========== 
             top row 
             ========== -->
-            <a class="mask w-full h-[98px] py-2 rounded flex flex-col items-center justify-center hover:bg-light-red" href="">
-                <img src="./img/tools_icon.png" alt="">
+            <a class="mask w-full py-2 rounded flex flex-col items-center hover:bg-light-red" href="">
+                <img src="./img/combat_icon.png" alt="">
                 <span class="font-asul text-2xl text-slate-300">Tools & Resources</span>
             </a>
 
@@ -475,8 +471,8 @@
             <!-- ========== 
             top row 
             ========== -->
-            <a class="mask w-full h-[98px] py-2 rounded flex flex-col items-center justify-center hover:bg-light-red" href="">
-                <img src="./img/online_icon.png" alt="">
+            <a class="mask w-full py-2 rounded flex flex-col items-center hover:bg-light-red" href="">
+                <img src="./img/combat_icon.png" alt="">
                 <span class="font-asul text-2xl text-slate-300">Online</span>
             </a>
 
@@ -502,7 +498,6 @@
             </ul>
         </div>
     </section>
-
 
     <!-- ========== ========== ==========
     Footer 
