Updated content ion nioh2.html. Updated card colors in wolong.html. Added new colors in tailwind.config.js.

--- a/nioh2/nioh2.html
+++ b/nioh2/nioh2.html
@@ -20,14 +20,14 @@
     <!-- ========== ========== ==========
     TailWindCSS Link
     ========== ========== ========== -->
-    <link type="text/css" href="https://liukang1080.github.io/gamewiki/css/output.css" rel="stylesheet">
-    <!-- <link type="text/css" href="../css/output.css" rel="stylesheet"> -->
+    <!-- <link type="text/css" href="https://liukang1080.github.io/gamewiki/css/output.css" rel="stylesheet"> -->
+    <link type="text/css" href="../css/output.css" rel="stylesheet">
 
     <!-- ========== ========== ==========
     Manual CSS Link
     ========== ========== ========== -->
-    <link type="text/css" href="https://liukang1080.github.io/gamewiki/css/manual.css" rel="stylesheet">
-    <!-- <link type="text/css" href="../css/manual.css" rel="stylesheet"> -->
+    <!-- <link type="text/css" href="https://liukang1080.github.io/gamewiki/css/manual.css" rel="stylesheet"> -->
+    <link type="text/css" href="../css/manual.css" rel="stylesheet">
 
     <!-- ========== ========== ==========
     TailWind CSS build process:
@@ -79,8 +79,6 @@
                     <!-- Dropdown menu -->
                     <div id="basics_dropdown" class="w-50 z-10 hidden divide-y divide-gray-100 rounded-lg shadow bg-medium-gray">
                         <ul class="py-2 font-asul text-gray-200" aria-labelledby="generalButton">
-                            <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Basic Game Info / Settings</a></li>
-                            <hr class="h-[2px] border-0 bg-stone-200">
                             <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Recommended Settings</a></li>
                             <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Starting Recommendations</a></li>
                             <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Character Stats</a></li>
@@ -102,8 +100,6 @@
                     <!-- Dropdown menu -->
                     <div id="combat_dropdown" class="w-50 z-10 hidden divide-y divide-gray-100 rounded-lg shadow bg-medium-gray">
                         <ul class="py-2 font-asul text-gray-200" aria-labelledby="generalButton">
-                            <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Combat</a></li>
-                            <hr class="h-[2px] border-0 bg-stone-200">
                             <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Stances</a></li>
                             <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Ki Pulse</a></li>
                             <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Skills / Skill Trees</a></li>
@@ -126,8 +122,6 @@
                     <!-- Dropdown menu -->
                     <div id="equipment_dropdown" class="w-50 z-10 hidden divide-y divide-gray-100 rounded-lg shadow bg-medium-gray">
                         <ul class="py-2 font-asul text-gray-200" aria-labelledby="generalButton">
-                            <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Equipment</a></li>
-                            <hr class="h-[2px] border-0 bg-stone-200">
                             <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Weapons</a></li>
                             <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Armor</a></li>
                             <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Ninjutsu</a></li>
@@ -153,8 +147,6 @@
                     <!-- Dropdown menu -->
                     <div id="world_dropdown" class="w-50 z-10 hidden divide-y divide-gray-100 rounded-lg shadow bg-medium-gray">
                         <ul class="py-2 font-asul text-gray-200" aria-labelledby="generalButton">
-                            <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">World</a></li>
-                            <hr class="h-[2px] border-0 bg-stone-200">
                             <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Missions</a></li>
                             <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Enemies</a></li>
                             <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Bosses</a></li>
@@ -177,8 +169,6 @@
                     <!-- Dropdown menu -->
                     <div id="tools_dropdown" class="w-50 z-10 hidden divide-y divide-gray-100 rounded-lg shadow bg-medium-gray">
                         <ul class="py-2 font-asul text-gray-200" aria-labelledby="generalButton">
-                            <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Tools & Resources</a></li>
-                            <hr class="h-[2px] border-0 bg-stone-200">
                             <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Smithing Texts</a></li>
                             <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Temper Tables</a></li>
                             <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Blacksmith</a></li>
@@ -201,8 +191,6 @@
                     <!-- Dropdown menu -->
                     <div id="online_dropdown" class="w-50 z-10 hidden divide-y divide-gray-100 rounded-lg shadow bg-medium-gray">
                         <ul class="py-2 font-asul text-gray-200" aria-labelledby="generalButton">
-                            <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Online</a></li>
-                            <hr class="h-[2px] border-0 bg-stone-200">
                             <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Online Modes</a></li>
                             <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Matchmaking</a></li>
                             <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Hidden Tea House</a></li>
@@ -269,10 +257,10 @@
             <!-- ========== 
             top row 
             ========== -->
-            <a class="mask w-full h-[98px] py-2 rounded flex flex-col items-center justify-center hover:bg-light-red" href="">
+            <div class="mask w-full h-[98px] py-2 rounded flex flex-col items-center justify-center bg-medium-red">
                 <img src="./img/basics_icon.png" alt="">
                 <span class="font-asul text-2xl text-slate-300">Basics</span>
-            </a>
+            </div>
 
             <!-- ========== 
             link list
@@ -306,10 +294,10 @@
             <!-- ========== 
             top row 
             ========== -->
-            <a class="mask w-full h-[98px] py-2 rounded flex flex-col items-center justify-center hover:bg-light-red" href="">
+            <div class="mask w-full h-[98px] py-2 rounded flex flex-col items-center justify-center bg-medium-red">
                 <img src="./img/combat_icon.png" alt="">
                 <span class="font-asul text-2xl text-slate-300">Combat</span>
-            </a>
+            </div>
 
             <!-- ========== 
             link list
@@ -346,10 +334,10 @@
             <!-- ========== 
             top row 
             ========== -->
-            <a class="mask w-full h-[98px] py-2 rounded flex flex-col items-center justify-center hover:bg-light-red" href="">
+            <div class="mask w-full h-[98px] py-2 rounded flex flex-col items-center justify-center bg-medium-red">
                 <img src="./img/equipment_icon.png" alt="">
                 <span class="font-asul text-2xl text-slate-300">Equipment</span>
-            </a>
+            </div>
 
             <!-- ========== 
             link list
@@ -395,10 +383,10 @@
             <!-- ========== 
             top row 
             ========== -->
-            <a class="mask w-full h-[98px] py-2 rounded flex flex-col items-center justify-center hover:bg-light-red" href="">
+            <div class="mask w-full h-[98px] py-2 rounded flex flex-col items-center justify-center bg-medium-red">
                 <img src="./img/world_icon.png" alt="">
                 <span class="font-asul text-2xl text-slate-300">World</span>
-            </a>
+            </div>
 
             <!-- ========== 
             link list
@@ -435,10 +423,10 @@
             <!-- ========== 
             top row 
             ========== -->
-            <a class="mask w-full h-[98px] py-2 rounded flex flex-col items-center justify-center hover:bg-light-red" href="">
+            <div class="mask w-full h-[98px] py-2 rounded flex flex-col items-center justify-center bg-medium-red">
                 <img src="./img/tools_icon.png" alt="">
                 <span class="font-asul text-2xl text-slate-300">Tools & Resources</span>
-            </a>
+            </div>
 
             <!-- ========== 
             link list
@@ -475,10 +463,10 @@
             <!-- ========== 
             top row 
             ========== -->
-            <a class="mask w-full h-[98px] py-2 rounded flex flex-col items-center justify-center hover:bg-light-red" href="">
+            <div class="mask w-full h-[98px] py-2 rounded flex flex-col items-center justify-center bg-medium-red">
                 <img src="./img/online_icon.png" alt="">
                 <span class="font-asul text-2xl text-slate-300">Online</span>
-            </a>
+            </div>
 
             <!-- ========== 
             link list
