Removed main.js and moved navbar and random_image function into their own .js files. Updated the js path link in nioh2.html. Updated equipment.html.

--- a/nioh2/nioh2.html
+++ b/nioh2/nioh2.html
@@ -58,7 +58,7 @@
                 </a>
 
                 <!-- Nioh 2 Logo -->
-                <a href="./nioh2.html"><img src="./img/nioh2_logo_2.png" alt=""></a>
+                <a href="https://liukang1080.github.io/gamewiki/nioh2/nioh2.html"><img src="https://liukang1080.github.io/gamewiki/nioh2/img/nioh2_logo_2.png" alt=""></a>
 
                 <!-- Navbar Buttons -->
                 <!-- hidden nav for mobile viewports -->
@@ -501,8 +501,7 @@
         <div class="flex flex-col items-center gap-1 md:gap-3
             lg:flex-row">
         
-            <a class="  text-xl text-slate-300" href="">Nioh 2 Wiki</a>
-
+            <a class="text-xl text-slate-300" href="https://liukang1080.github.io/gamewiki/nioh2/nioh2.html">Nioh 2 Wiki</a>
             <span class="text-slate-300">Development: LiuKang1080</span>
         </div>
 
@@ -516,9 +515,17 @@
     <!-- FlowBite JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.3/flowbite.min.js"></script>
 
-    <!-- Local JavaScript -->
-    <script src="./js/main.js" type="text/javascript" defer></script>
+    <!-- ==========
+    Local JavaScript
+    ========== -->
+    <!-- Navbar JS -->
+    <!-- <script src="https://liukang1080.github.io/gamewiki/nioh2/js/navbar.js" type="text/javascript" defer></script> -->
+    <script src="./js/navbar.js" type="text/javascript" defer></script>
     <!-- defer ensures that the page gets fully loaded before the JavaScript executes -->
+    
+    <!-- Background JS -->
+    <!-- <script src="https://liukang1080.github.io/gamewiki/nioh2/js/background_image.js" type="text/javascript" defer></script> -->
+    <script src="./js/background_image.js" type="text/javascript" defer></script>
 
 </body>
 </html>
