Added max-width extensions in tailwind.config.js. Added more content to equipment_index.html.

--- a/nioh2/equipment/equipment_index.html
+++ b/nioh2/equipment/equipment_index.html
@@ -229,10 +229,13 @@
 
     <!-- Title Section -->
     <section class="w-full my-12 flex flex-col items-center">
-        <div class="">
-            <h1 class="text-yellow-400 text-5xl">Equipment</h1>
+        <div class="lg:max-w-section-width w-full flex flex-col items-center gap-6">
+            <h1 class="text-yellow-400 text-5xl">Nioh 2 Equipment</h1>
+            <hr class="w-full h-[2px] bg-stone-600 border-0">
         </div>
     </section>
+
+
 
 
     <!-- ========== ========== ==========
@@ -258,9 +261,17 @@
     <!-- FlowBite JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.3/flowbite.min.js"></script>
 
-    <!-- Local JavaScript -->
-    <script src="./js/main.js" type="text/javascript" defer></script>
+    <!-- ==========
+    Local JavaScript
+    ========== -->
+    <!-- Navbar JS -->
+    <script src="https://liukang1080.github.io/gamewiki/nioh2/js/navbar.js" type="text/javascript" defer></script>
+    <!-- <script src="./js/navbar.js" type="text/javascript" defer></script> -->
     <!-- defer ensures that the page gets fully loaded before the JavaScript executes -->
+    
+    <!-- Background JS -->
+    <script src="https://liukang1080.github.io/gamewiki/nioh2/js/background_image.js" type="text/javascript" defer></script>
+    <!-- <script src="./js/background_image.js" type="text/javascript" defer></script> -->
 
 </body>
 </html>
